--- a/model_config.json
+++ b/model_config.json
@@ -3,146 +3,31 @@
     "task_name": "Initial test",
     "dataset_name": "dataset",
     "split_dataset": "False",
-    "load_data_from": "raw",
-    "save_datasets": "True",
+    "process_images": "False",
+    "save_datasets": "False",
     "split_ratio": 0.2,
-    "img_size":{
+    "img_channels": 1,
+    "image_size": {
         "width": 224,
-        "height": 224
+        "height": 224 
     },
     "model_params": {
         "batch_size": 64,
         "epochs": 200,
         "patience": 50,
         "min_delta": 1e-2,
-        "objective_trials": 100
+        "num_filters": 32,
+        "expansion_factor": 6,
+        "se_ratio": 0.25
     },
     "optmiser":{
         "type": "SGD",
         "initial_lr": 1e-2,
         "momentum": 0.8
     },
-    "reduce_lr": {
+    "reduce_plateau": {
         "reduce_factor": 0.5,
-        "patience": 7,
+        "patience": 10,
         "minimum_lr": 1e-5
-    },
-    "CNN":{
-        "dropout": 0.2,
-        "layer1":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer2":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer3":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer4":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer5":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer6":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer7":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        },
-        "layer8":{
-            "num_filter": 128,
-            "kernel_size": 5,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU",
-            "stride": 1,
-            "pooling_type": "max",
-            "pool_size": 2
-        }
-    },
-    "Dense":{
-        "dropout": 0.2,
-        "layer1":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer2":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer3":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer4":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer5":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer6":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer7":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        },
-        "layer8":{
-            "num_neurons": 128,
-            "kernel_initializer": "he_uniform",
-            "activation function": "LeakyReLU"
-        }
     }
 }
