--- a/model_config.json
+++ b/model_config.json
@@ -18,7 +18,7 @@
         "epochs": 200,
         "patience": 50,
         "min_delta": 1e-2,
-        "expansion_factor": 6,
+        "expansion_factor": 3,
         "se_ratio": 0.25,
         "stem":{
             "num_filters": 32,
@@ -28,16 +28,16 @@
         },
         "core":{
             "num_blocks": 3,
-            "depth_exp": 2,
+            "width_exp": 2,
             "kernel_size": 5,
             "kernel_init": "he_normal",
             "stride": 2
         },
         "head":{
-
+            "num_layers": 3,
+            "kernel_init": "he_normal"
         }
     },
-
     "optmiser":{
         "type": "SGD",
         "initial_lr": 1e-2,
